[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/nodes/InputActionButton.gd" type="Script" id=1]
[ext_resource path="res://assets/nodes/cooltheme.tres" type="Theme" id=2]

[node name="Action Input Button" type="Button"]
margin_right = 12.0
margin_bottom = 20.0
theme = ExtResource( 2 )
toggle_mode = true
text = "jump"
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="gui_input" from="." to="." method="_on_Action_Input_Button_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_Action_Input_Button_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Action_Input_Button_mouse_exited"]
